     full support for negation and fall-back to classic wildcard matching.
     For example:
     Match address 192.0.2.0/24,3ffe:ffff::/32,!10.*
         PasswordAuthentication yes
     addrmatch.c code mostly lifted from flowd's addr.c
     feedback and ok dtucker@
   - djm@cvs.openbsd.org 2008/06/10 04:17:46
     [sshd_config.5]
     better reference for pattern-list

20080609
 - (dtucker) OpenBSD CVS Sync
   - dtucker@cvs.openbsd.org 2008/06/08 17:04:41
     [sftp-server.c]
     Add case for ENOSYS in errno_to_portable; ok deraadt
   - dtucker@cvs.openbsd.org 2008/06/08 20:15:29
     [sftp.c sftp-client.c sftp-client.h]
     Have the sftp client store the statvfs replies in wire format,
     which prevents problems when the server's native sizes exceed the
     client's.
     Also extends the sizes of the remaining 32bit wire format to 64bit,
     they're specified as unsigned long in the standard.
   - dtucker@cvs.openbsd.org 2008/06/09 13:02:39
     [sftp-server.c]
     Extend 32bit -> 64bit values for statvfs extension missed in previous
     commit.
   - dtucker@cvs.openbsd.org 2008/06/09 13:38:46
     [PROTOCOL]
     Use a $OpenBSD tag so our scripts will sync changes.

20080608
 - (dtucker) [configure.ac defines.h sftp-client.c sftp-server.c sftp.c
   openbsd-compat/Makefile.in openbsd-compat/openbsd-compat.h
   openbsd-compat/bsd-statvfs.{c,h}] Add a null implementation of statvfs and
   fstatvfs and remove #defines around statvfs code.  ok djm@
 - (dtucker) [configure.ac defines.h sftp-client.c M sftp-server.c] Add a
   macro to convert fsid to unsigned long for platforms where fsid is a
   2-member array.

20080607
 - (dtucker) [mux.c] Include paths.h inside ifdef HAVE_PATHS_H.
 - (dtucker) [configure.ac defines.h sftp-client.c sftp-server.c sftp.c]
   Do not enable statvfs extensions on platforms that do not have statvfs.
 - (dtucker) OpenBSD CVS Sync
   - djm@cvs.openbsd.org 2008/05/19 06:14:02